// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshots: onFinish assembly/jest-reporter.ts 1`] = `
"    [File]: assembly/jest-reporter.ts RTrace: +1
  [Groups]: 2 pass, 2 total
  [Result]: ✔ PASS
[Snapshot]: 0 total, 0 added, 0 removed, 0 different
 [Summary]: 2 pass,  0 fail, 2 total
    [Time]: 0ms

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

"
`;

exports[`snapshots: onGroupEnd  1`] = `""`;

exports[`snapshots: onGroupEnd a passing suite 1`] = `
"
"
`;

exports[`snapshots: onGroupStart a passing suite 1`] = `
"[Describe]: a passing suite

     [Log]: \\"Something else!\\"
   [Stack]: at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[40]:0x13d8)
            at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[41]:0x1408)
            at start:assembly/jest-reporter-pass~anonymous|0 (wasm-function[59]:0x161a)
            at ../assembly/assembly/internal/call/__call (wasm-function[62]:0x1659)
"
`;

exports[`snapshots: onTestFinish a passing suite it throws successfully! 1`] = `
"  [Throws]: ✔ it throws successfully! RTrace: +1
"
`;

exports[`snapshots: onTestFinish a passing suite passes 1`] = `
" [Success]: ✔ passes
     [Log]: \\"Something!\\"
   [Stack]: at ../assembly/assembly/internal/Reflect/Reflect.attachStackTrace (wasm-function[40]:0x13d8)
            at ../assembly/assembly/internal/log/log<~lib/string/String> (wasm-function[41]:0x1408)
            at start:assembly/jest-reporter-pass~anonymous|0~anonymous|0 (wasm-function[53]:0x15a2)
            at ../assembly/assembly/internal/call/__call (wasm-function[62]:0x1659)
"
`;

exports[`snapshots: onTestStart a passing suite it throws successfully! 1`] = `""`;

exports[`snapshots: onTestStart a passing suite passes 1`] = `""`;
